# bank_integration

identity-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
identity-service/alembic/versions/: 0001_initial_identity.py
identity-service/app/: __init__.py  main.py
identity-service/app/api/v1/: auth.py  branches.py  departments.py  deps.py  permissions.py  roles.py  router.py  services.py  users.py
identity-service/app/core/: config.py  security.py
identity-service/app/db/: base.py  session.py
identity-service/app/models/: __init__.py  identity.py
identity-service/app/repositories/: identity.py
identity-service/app/schemas/: identity.py
identity-service/app/services/: bootstrap.py  tokens.py
identity-service/docs/: INTEGRATION.md
identity-service/examples/: fastapi_dependency.py
identity-service/frontend/: Dockerfile  index.html  package.json  vite.config.ts
identity-service/frontend/src/: App.tsx  main.tsx  styles.css
identity-service/frontend/src/components/: Icon.tsx
identity-service/frontend/src/lib/: api.ts  types.ts
identity-service/tests/: conftest.py  test_identity_api.py
platform/: README.md  docker-compose.yml
platform/apps/api/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
platform/apps/api/app/: __init__.py  main.py
platform/apps/api/app/api/v1/: platform.py  router.py
platform/apps/api/app/core/: config.py
platform/apps/api/app/models/: platform.py
platform/apps/api/app/services/: platform.py
platform/apps/api/tests/: test_platform_api.py
platform/apps/web/: Dockerfile  index.html  package.json  vite.config.ts
platform/apps/web/src/: App.tsx  styles.css
platform/apps/web/src/components/: StatusDot.tsx
platform/apps/web/src/lib/: api.ts  types.ts
platform/docs/: UX_UI_SYSTEM.md
